test/files/neg/t284.scala
trait B[T] {
  def f1(a: T): Unit { }
  def f2(a: T): Unit
  def f3(a: T) { }
}
