test/files/neg/t284.check
t284.scala:2: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
  def f1(a: T): Unit { }
                     ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
